--- a/package.json
+++ b/package.json
@@ -67,7 +67,15 @@
     "typescript": "5.2.2",
     "vaul": "^0.9.9",
     "zod": "^3.23.8",
-    "mongoose": "^8.14.1"
+    "mongoose": "^8.14.1",
+    "mongodb-client-encryption": "^6.3.0",
+    "aws4": "^1.13.2",
+     "@aws-sdk/credential-providers": "^3.799.0",
+  "@mongodb-js/zstd": "^2.0.1",
+  "kerberos": "^2.2.2",
+  "gcp-metadata": "^6.1.1",
+  "snappy": "^7.2.2",
+  "socks": "^2.8.4",
 
   }
 }
