--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://temp0x:TSgloCUm6ocCfj2C@cluster0.aqahvyf.mongodb.net/
+MONGODB_URI=mongodb+srv://temp0x:TSgloCUm6ocCfj2C@cluster0.aqahvyf.mongodb.net/tech1-zeta?retryWrites=true&w=majority&appName=Cluster0
